--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>fruit-brust</title>
+  <title>Fruit-brust</title>
   <!-- script for Tailwind and Daisy UI -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 
   <!-- theme -->
   <html data-theme="light"></html>
 
-  <!-- font awesome link -->
+  <!-- font awesome -->
   <script src="https://kit.fontawesome.com/c21a42c815.js" crossorigin="anonymous"></script>
   <!-- ---Google fonts-- -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
